Started a new 'wpsp.py' file with most of the code from the previous version of the script. Keeping the previous 'wpspeed.py' file as there's still some useful code inside it. The results from the profiler test are now stored within a list of dictionaries. The table printing is now also updated to reflect on the above.

--- a/todo.txt
+++ b/todo.txt
@@ -2,4 +2,4 @@
 
 
 1. Remove the PageSpeed test section
-2.
+2. Build a system to review the profiler results and generate new ones with details and recommendations
